--- a/index.pt_BR.html
+++ b/index.pt_BR.html
@@ -26,9 +26,9 @@
             <h3 id="introduction">Introdução</h3>
             <p>Adicione anotações <code>@Bind</code> e um ID à view para o Butter Knife encontrar e fazer o cast automáticamente da view correspondente no seu layout.</p>
             <pre class="prettyprint">class ActivityExemplo extends Activity {
-  @Bind(R.id.title) TextView titulo;
-  @Bind(R.id.subtitle) TextView subtitulo;
-  @Bind(R.id.footer) TextView rodape;
+  @Bind(R.id.titulo) TextView titulo;
+  @Bind(R.id.subtitulo) TextView subtitulo;
+  @Bind(R.id.rodape) TextView rodape;
 
   @Override public void onCreate(Bundle savedInstanceState) {
     super.onCreate(savedInstanceState);
@@ -37,7 +37,7 @@
     // TODO Use os campos...
   }
 }</pre>
-            <p>Ao invés de uma reflexão lenta, o código é gerado para encontrar as views. Chamar <code>bind</code> gera o código abaixo que você pode ver e depurar.</p>
+            <p>Ao invés de uma reflexão lenta, o código é gerado para encontrar as views. Chamar <code>@bind</code> gera o código abaixo que você pode ver e depurar.</p>
             <p>O código gerado para o exemplo acima é equivalente ao seguinte:</p>
             <pre class="prettyprint">public void bind(ExampleActivity activity) {
   activity.subtitulo = (android.widget.TextView) activity.findViewById(2130968578);
@@ -54,7 +54,7 @@
   @Override public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
     View view = inflater.inflate(R.layout.fancy_fragment, container, false);
     ButterKnife.bind(this, view);
-    // TODO Use fields...
+    // TODO Use os campos...
     return view;
   }
 }</pre>
@@ -70,15 +70,15 @@
       view.setTag(holder);
     }
 
-    holder.name.setText("John Doe");
+    holder.nome.setText("John Doe");
     // etc...
 
     return view;
   }
 
   static class ViewHolder {
-    @Bind(R.id.title) TextView name;
-    @Bind(R.id.job_title) TextView jobTitle;
+    @Bind(R.id.nome) TextView nome;
+    @Bind(R.id.sobrenome) TextView sobrenome;
 
     public ViewHolder(View view) {
       ButterKnife.bind(this, view);
@@ -95,7 +95,7 @@
 
             <h4 id="view-lists">Listas de Views</h4>
             <p>Você pode agrupar multiplos Views em um<code>List</code> ou array.</p>
-            <pre class="prettyprint">@Bind({ R.id.first_name, R.id.middle_name, R.id.last_name })
+            <pre class="prettyprint">@Bind({ R.id.nome, R.id.nome_do_meio, R.id.ultimo_nome })
 List&lt;EditText> nameViews;</pre>
             <p>O método <code>apply</code> permite que você use todas as views em uma lista de uma só vez.</p>
             <pre class="prettyprint">ButterKnife.apply(nameViews, DISABLE);
@@ -116,34 +116,34 @@ static final ButterKnife.Setter&lt;View, Boolean> ENABLED = new ButterKnife.Sett
 
             <h4 id="listener-binding">Vinculação de Listeners</h4>
             <p>Listeners can also automatically be configured onto methods.</p>
-            <pre class="prettyprint">@OnClick(R.id.submit)
-public void submit(View view) {
-  // TODO submit data to server...
+            <pre class="prettyprint">@OnClick(R.id.enviar)
+public void enviar(View view) {
+  // TODO enviar dados ao servidor...
 }</pre>
             <p>Todos os argumentos do listener são opcionais.</p>
-            <pre class="prettyprint">@OnClick(R.id.submit)
-public void submit() {
-  // TODO submit data to server...
+            <pre class="prettyprint">@OnClick(R.id.enviar)
+public void enviar() {
+  // TODO enviar dados ao servidor...
 }</pre>
             <p>Defina um tipo específico e ele será convertido automaticamente.</p>
-            <pre class="prettyprint">@OnClick(R.id.submit)
-public void sayHi(Button button) {
-  button.setText("Hello!");
+            <pre class="prettyprint">@OnClick(R.id.enviar)
+public void digaOi(Button button) {
+  button.setText("Oi!");
 }</pre>
             <p>Especifique múltiplos IDs em um único binding para tratar eventos comuns.</p>
-            <pre class="prettyprint">@OnClick({ R.id.door1, R.id.door2, R.id.door3 })
-public void pickDoor(DoorView door) {
-  if (door.hasPrizeBehind()) {
-    Toast.makeText(this, "You win!", LENGTH_SHORT).show();
+            <pre class="prettyprint">@OnClick({ R.id.porta1, R.id.porta2, R.id.porta3 })
+public void escolherPorta(Porta porta) {
+  if (porta.possuiPremio()) {
+    Toast.makeText(this, "Você Ganhou!", LENGTH_SHORT).show();
   } else {
-    Toast.makeText(this, "Try again", LENGTH_SHORT).show();
+    Toast.makeText(this, "Tente novamente.", LENGTH_SHORT).show();
   }
 }</pre>
             <p>Views customizadas podem vincular seus próprios listeners não especificando um ID.</p>
             <pre class="prettyprint">public class FancyButton extends Button {
   @OnClick
   public void onClick() {
-    // TODO do something!
+    // TODO faça algo!
   }
 }
 </pre>
@@ -157,7 +157,7 @@ public void pickDoor(DoorView door) {
   @Override public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
     View view = inflater.inflate(R.layout.fancy_fragment, container, false);
     ButterKnife.bind(this, view);
-    // TODO Use fields...
+    // TODO Use os campos...
     return view;
   }
 
@@ -171,9 +171,9 @@ public void pickDoor(DoorView door) {
             <p>Por default, tanto o <code>@Bind</code> quanto os binds de listeners são requeridos. Uma excessão será lançada se a view alvo não puder ser encontrada.</p>
             <p>Para ignorar esse comportamento e criar binds opcionais, adicione a anotação <code>@Nullable</code> ao campo ou método.</p>
             <p>Nota: Qualquer anotação <code>@Nullable</code> pode ser utilizada para isso. É recomendado utilizar a anotação <code>@Nullable</code> da biblioteca "support-annotations" do Android, veja <a href="http://tools.android.com/tech-docs/support-annotations">Android Tools Project</a>.</p>
-            <pre class="prettyprint">@Nullable @Bind(R.id.might_not_be_there) TextView mightNotBeThere;
+            <pre class="prettyprint">@Nullable @Bind(R.id.pode_nao_estar_la) TextView podeNaoEstarLa;
 
-@Nullable @OnClick(R.id.maybe_missing) void onMaybeMissingClicked() {
+@Nullable @OnClick(R.id.talvez_ausente) void onTalvezAusenteClicked() {
   // TODO ...
 }</pre>
 
@@ -191,10 +191,10 @@ void onNothingSelected() {
 
             <h4 id="bonus">Bonus</h4>
             <p>Métodos <code>findById</code> que simplificam código que ainda tem que encontrar views em uma <code>View</code>, <code>Activity</code>, or <code>Dialog</code>, também estão inclusos. É utilizado tipos genéricos para inferir o tipo do retorno e automaticamente o converte.</p>
-            <pre class="prettyprint">View view = LayoutInflater.from(context).inflate(R.layout.thing, null);
-TextView firstName = ButterKnife.findById(view, R.id.first_name);
-TextView lastName = ButterKnife.findById(view, R.id.last_name);
-ImageView photo = ButterKnife.findById(view, R.id.photo);</pre>
+            <pre class="prettyprint">View view = LayoutInflater.from(context).inflate(R.layout.algo, null);
+TextView primeiroNome = ButterKnife.findById(view, R.id.primeiro_nome);
+TextView ultimoNome = ButterKnife.findById(view, R.id.ultimo_nome);
+ImageView foto = ButterKnife.findById(view, R.id.foto);</pre>
             <p>Adicione um import estático a <code>ButterKnife.findById</code> e se divirta ainda mais.</p>
 
             <h3 id="download">Download</h3>
@@ -225,7 +225,7 @@ ImageView photo = ButterKnife.findById(view, R.id.photo);</pre>
             <h4 id="ide">Configuração da IDE</h4>
             <p>Algumas IDEs requerem configurações adicionais para habilitar o processamento de anotações.</p>
             <ul>
-              <li><em>IntelliJ IDEA</em> &mdash; Se você utiliza alguma configuração externa em seu projeto (Como <code>pom.xml</code> do Maven) o processamento de anotações deve funcionar. Se não, veja o <a href="ide-idea.html">manual de configuração</a>.</li>
+              <li><em>IntelliJ IDEA</em> &mdash; Se você utiliza alguma configuração externa em seu projeto (Como <code>pom.xml</code> do Maven) o processamento de anotações deve funcionar. Se não, veja o <a href="ide-idea.pt_BR.html">manual de configuração</a>.</li>
               <li><em>Eclipse</em> &mdash; <a href="ide-eclipse.pt_BR.html">manual de configuração</a>.</li>
             </ul>
 
